state stuff on cheque

--- a/addons-obs/l10n_do_check_printing/views/account_voucher.xml
+++ b/addons-obs/l10n_do_check_printing/views/account_voucher.xml
@@ -19,8 +19,24 @@
                 <field name="name" position="replace">
                     <field name="name"/>
                 </field>
+                <xpath expr="//field[@name='state']" position="replace">
+                    <field name="state"/>
+                </xpath>
+                <xpath expr="//button[@name='cancel_voucher']" position="after">
+                    <button name="deliver_voucher" string="Entregar Cheque" type="object" states="posted"
+                            class="oe_highlight"/>
+                    <button name="reintegrate_voucher" string="Reintegrar Cheque" type="object" states="delivered"
+                            confirm="Esta seguro de que desea reintegrar este cheque?"/>
+
+                </xpath>
+                <xpath expr="//field[@name='state']" position="replace">
+                    <field name="state" widget="statusbar" statusbar_visible="draft,posted,delivered"
+                           statusbar_colors='{"proforma":"blue"}'/>
+                </xpath>
+
+
+
             </field>
          </record>
-
     </data>
 </openerp>
