--- a/addons-obs/bista_freeze_header/static/src/css/freeze_header.css
+++ b/addons-obs/bista_freeze_header/static/src/css/freeze_header.css
@@ -6,7 +6,9 @@
 }
 
 .openerp .oe_form header{
-position: fixed;
+position: relative;
 z-index: 1;
-width: 82%;
+width: 100%;
+/*margin-top: -18px;
+margin-botton: 10px;*/
 }
