--- a/addons-obs/bista_freeze_header/static/src/css/freeze_header.css
+++ b/addons-obs/bista_freeze_header/static/src/css/freeze_header.css
@@ -6,9 +6,14 @@
 }
 
 .openerp .oe_form header{
-position: relative;
-z-index: 1;
-width: 100%;
-/*margin-top: -18px;
-margin-botton: 10px;*/
+   position: fixed;
+   z-index: 1;
+   width: 82%;
+}
+.openerp .account_move_header header {
+    position: relative;
+    z-index: 1;
+    width: 100% !important;
+    margin-top -18px !important;
+    margin-bottom: 10px !important;
 }
